// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet/createAtomicRules transforms custom "animationName" declaration 1`] = `
Array [
  "@-webkit-keyframes r-anim-2k74q5{0%{top:0px}50%{top:5px}100%{top:10px}}",
  "@keyframes r-anim-2k74q5{0%{top:0px}50%{top:5px}100%{top:10px}}",
  "@-webkit-keyframes r-anim-zc91cv{from{left:0px}to{left:10px}}",
  "@keyframes r-anim-zc91cv{from{left:0px}to{left:10px}}",
  ".test{-webkit-animation-name:r-anim-2k74q5,r-anim-zc91cv;animation-name:r-anim-2k74q5,r-anim-zc91cv}",
]
`;

exports[`StyleSheet/createAtomicRules transforms custom "placeholderTextColor" declaration 1`] = `
Array [
  "@media all {.test::-webkit-input-placeholder{color:gray;opacity:1}.test::-moz-placeholder{color:gray;opacity:1}.test:-ms-input-placeholder{color:gray;opacity:1}.test::placeholder{color:gray;opacity:1}}",
]
`;

exports[`StyleSheet/createAtomicRules transforms custom "pointerEvents" declaration 1`] = `
Array [
  ".test > *{pointer-events:none}",
  ".test{pointer-events:auto !important}",
]
`;

exports[`StyleSheet/createAtomicRules transforms standard declarations to a single rule 1`] = `
Array [
  ".test{margin:0px}",
]
`;
